[metadata]
name = DampeDataCatalog2
summary = Data Catalog & Crawler utilities
author = Stephan Zimmer (University of Geneva)
author-email = zimmer@cern.ch
description-file = README.md
license = BSD
classifier =
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.6
	Programming Language :: Python :: 2.7
keywords = DDC2

[files]
packages = 
	DampeDataCatalog

[entry_points]
console_scripts =
    run-crawler = DampeDataCatalog2.scripts.cawler:main
